# mt-on-tour

./: .gitignore  Cargo.toml  README.md  WASMD.md  WASMD_DOCKER.md  a.json  b.json  counter.wasm  rebuild-docker.sh  taskfile.yml  tutu-taskfile.yml  wasmd.sh
addresses/: Cargo.toml  README.md  Taskfile.yml
addresses/tests/: contract_address.rs  mod.rs  user_address.rs
addresses/tests/multitest/: test_app_api.rs
app/: Cargo.toml
app-builder/: Cargo.toml
app-builder/tests/multitest/: test_with_block.rs
app/tests/multitest/: mod.rs  test_creating_app.rs
blocks/: Cargo.toml
counter/: Cargo.toml  README.md  data.json
counter-sv/: Cargo.toml
counter-sv/src/: contract.rs
counter-sv/tests/multitest/: test_counter.rs
counter/tests/multitest/: test_counter.rs
eurimo/: Cargo.toml  README.md
eurimo/src/: contract.rs
eurimo/tests/multitest/: mod.rs  test_instantiate.rs  test_metadata.rs
intro/: Cargo.toml  README.md  Taskfile.yml
intro/src/: contract.rs
intro/tests/multitest/: mod.rs  test_execute.rs  test_query.rs
morph/: Cargo.toml  README.md  Taskfile.yml
morph/src/: contract.rs  msg.rs
morph/tests/multitest/: mod.rs  test_execute.rs  test_metadata.rs
nayel/: Cargo.toml  README.md
nayel/src/: contract.rs  msg.rs
responder/: ADDER.md  Cargo.toml  MSG_ADD.md  MSG_WASM_EXECUTE.md  README.md  SCENARIO_1.md
responder/src/: contract.rs  msg.rs
stargate/: .gitignore  Cargo.toml  README.md  Taskfile.yml
stargate/src/: contract.rs
stargate/tests/: integration.rs
