[workspace]

resolver = "2"

members = [
    "addresses",
    "app",
    "app-builder",
    "blocks",
    "counter",
    "counter-sv",
    "intro",
    "nayel",
    "responder",
]

[workspace.package]
version = "1.0.0"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DariuszDepta/mt-on-tour.git"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[workspace.dependencies]
cosmwasm-schema = "2"
cosmwasm-std = { version = "2", features = ["cosmwasm_2_2"] }
cw-multi-test = { version = "2", features = ["staking", "stargate", "cosmwasm_2_2"] }
cw-storage-plus = "2"
schemars = "0.8"
serde = "1.0"
sylvia = { version = "1" }
