[package]
name = "addresses"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
base64 = "0.22.1"
sha2 = "0.10.8"
ripemd = "0.1.3"
bech32 = "0.11.0"
