[package]
name = "addresses"
version = "1.0.0"
authors = ["Dariusz Depta <depta@engos.de>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
cosmwasm-std = { version = "2", features = ["cosmwasm_2_2"] }

[dev-dependencies]
cw-multi-test = { version = "2", features = ["staking", "stargate", "cosmwasm_2_2"] }
base64 = "0.22.1"
sha2 = "0.10.8"
ripemd = "0.1.3"
bech32 = "0.11.0"
