[package]
name = "counter-sv"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema-counter-sv"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sylvia = { workspace = true }

[dev-dependencies]
sylvia = { workspace = true, features = ["mt"] }
