[package]
name = "eurimo"
version = "1.0.0"
authors = ["Dariusz Depta <depta@engos.de>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
cosmwasm-schema = "2"
cosmwasm-std = { version = "2", features = ["cosmwasm_2_2"] }

[dev-dependencies]
cw-multi-test = { version = "2", features = ["staking", "stargate", "cosmwasm_2_2"] }
