[package]
name = "intro"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema-intro"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
