[package]
name = "responder"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema-responder"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
