[package]
name = "mtot-stargate"
version = "1.0.0"
authors = ["Dariusz Depta <depta@engos.de>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
cosmwasm-schema = "2"
cosmwasm-std = { version = "2", features = ["cosmwasm_2_0"] }
cw-storage-plus = "3.0.0"
schemars = "0.8.22"
serde = "1.0.219"
ed25519-zebra = "=4.0.3"
osmosis-std = { version = "=0.27.0" }
prost = "=0.13.3"

[dev-dependencies]
cw-multi-test = { path = "../../../CosmWasm/cw-multi-test", features = ["staking", "stargate", "cosmwasm_2_0"] }
